@@ -121,6 +121,8 @@ def fork():
         # Explicitly open the tty to make it become a controlling tty.
         tmp_fd = os.open(os.ttyname(STDOUT_FILENO), os.O_RDWR)
         os.close(tmp_fd)
+    else:
+        os.close(slave_fd)
 
     # Parent and child process.
     return pid, master_fd
